# ami-preservation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
ami_scripts/: README.md  ami_collections_digitization_reporter.py  ami_file_sync.py  ami_record_exporter_and_analyzer.py  ami_single_collection_processor.py  analyze_files.py  append_eoy_report_intro.py  audio_concat_and_bag.py  audio_duration_diff.py  audio_processing.py  audio_processing_parallel.py  audio_processing_simplified.py  audio_scope_visualizer.py  audio_to_mp4_converter.py  aws_auth.py  cd_processing.py  check_fm_media_records.py  classify_audio.py  classify_audio_numpy.py  clean_cms_excel.py  clean_spec_csv_to_excel.py  compare_aws_eavie.py  config.json  copy_from_s3.py  copy_repo_file.py  copy_to_s3.py  cover_video_lines.py  create_media_json.py  create_object_bags.py  digitization_performance_tracker.py  digitization_performance_tracker_vendor.py  duplicate_filemaker_records.py  export_s3_to_csv.py  extract_env.sh  fetch_and_export_fm_data.py  fetch_spec_data.py  filemaker_export_records.py  filemaker_to_json_validator.py  filemaker_to_json_validator.py.py  film_processing.py  (+59 more)
ami_scripts/MediaConchPolicies_NEW/: MediaConch_NYPL_FFV1MKV.xml  MediaConch_NYPL_FFV1MKV_NEW_V02.xml
ami_scripts/MediaconchPolicies/: 2024_Audio_Digital_DAT.xml  2024_audio_analog.xml  2024_audio_analog_cylinder.xml  2024_audio_digital.xml  2024_audio_digital_DAT.xml  2024_audio_optical.xml  2024_film16_PM.xml  2024_film16_PM_compsound.xml  2024_film16_PM_silent.xml  2024_film35_PM.xml  2024_film35_PM_compsound.xml  2024_film35_PM_silent.xml  2024_film_MZ.xml  2024_film_MZ_compsound.xml  2024_film_MZ_silent.xml  2024_film_SC.xml  2024_film_SC_compsound.xml  2024_film_SC_silent.xml  2024_video_PM.xml  2024_video_PM_DV.xml  2024_video_SC.xml  2024_video_SC_opt.xml  2024_video_SC_optdv.xml  2026_audio_SC.xml  MediaConch_NYPL-FLAC_Analog.xml  MediaConch_NYPL-FLAC_Digital.xml  MediaConch_NYPL-PAMI_audioDigital_PM.xml  MediaConch_NYPL_8-16mmFilmPM.xml  MediaConch_NYPL_filmMZ.xml  MediaConch_NYPL_filmPM.xml
ami_scripts/old_scripts/: audio_transcoder_json.py  autoeditmasters.py  classify_audio_scipy.py  cms_export_cleanup.py  filemaker_merge_to_json.py  iso_transcoder_old.py  json_tester.py  json_updater.py  make_bags.sh  media_production_stats.py  mediaconch_checker_2023.py  mediaconch_checker_2024.py  mediaconch_validator.py  path_grabber.py  prepend_title_cards_old.py  probe_mp4s.sh  pull_mediainfo.py  sep_by_specs.py  ultimate_stats.py  unpackager.py
ami_scripts/old_scripts/qc_utilities/: QC_script.sh  isolyser_parse.py  mediaconch_35mm_filmPM.sh  mediaconch_audioDigital.sh  mediaconch_audioDigital_inHouse.sh  mediaconch_filmMZ.sh  mediaconch_filmSC.sh  mediaconch_videoAnalogSC.sh  mediaconch_video_inHouse_SC.sh
docs/: Gemfile  _config.yml  contract-digitization.md  index.md  quality-control.md  resources.md
docs-drafts/: README.md
docs/_includes/: head.html
docs/_includes/components/: header.html
docs/_site/: ami-labs.html  contract-digitization.html  film-assessment.html  home.html  index.html  index.md  pami-database.html  quality-control.html  resources.html  shipping.html
docs/_site/contractDigitization/: contract-digitization.html  contract-digitization.md
docs/_site/filmAssessment/: film-assessment.html  filmAssessment.html
docs/_site/home/: home.html  home.md
docs/_site/inHouseDigitization/: ami-labs.html  ami-labs.md
docs/_site/pages/: ami-handling.html  ami-labs.html  ami-specifications.html  contract-digitization.html  film-assessment.html  json.html  pami-database.html  quality-control.html  resources.html  shipping.html
docs/_site/pamiDB/: pami-database.html  pami-database.md
docs/_site/projectAdmin/: project-admin.html  project-workflow.html  project-workflow.md
docs/_site/qualityControl/: quality-control.html
docs/_site/resources/: resources.html
docs/_site/shipping/: shipping.html  shipping.md
docs/assets/css/: custom.css
docs/assets/js/: just-the-docs.js
docs/filmAssessment/: film-assessment.md  filmAssessment.md
docs/pages/: ami-handling.md  ami-labs-overview.md  ami-labs.md  ami-metadata.md  ami-specifications.md  cli-resources.md  contract-digitization.md  film-assessment.md  json.md  metadata.md  overview.md  pami-database.md  pami-overview.md  quality-control.md  resources.md  shipping.md
docs/pages/1_amiLabs/: ami-labs.md
docs/pages/amiLabs/: admin.md  ami-labs.md  audio.md  controlled-vocabularies.md  optical.md  video.md
docs/pages/contractDigitization/: contract-digitization.md  vendor-admin.md
docs/pages/docsMgmt/: docs-build.md  docs-guide.md  docs-mgmt.md
docs/pages/filmAssessment/: film-assessment.md  (+3 more)
docs/pamiDB/: _Sidebar.md  pami-database.md
docs/projectAdmin/: project-admin.md  project-workflow.md
docs/templates/: child-document-template.md  childless-document-template.md  templates.md
pami_scripts/: NYPLpackage_noqctools.sh  README.md  audio_decoder.py  audio_processing.py  audio_transcoder_json.py  classmark2cms.py  cms2hdd.py  cms_count.py  copy2s3.py  cp2s3.py  csv_concat.py  dvd_concat.py  file_pull.sh  json_stockfix.py  json_updater.py  json_validator.py  make_bags.sh  pandas_stats.py  path_rsyncer.py  pull_mediainfo.py  split_projects_into_objects.py  transcoder.py  unpackager.py  watermark.sh
pami_scripts/old_scripts/: NYPLpackage_noqctools.sh  audio_transcoder_excel.py  cms_count.py  dv_concatenator.py
qc_scripts/: isolyser_parse.py
qc_utilities/: MediaConch_NYPL_FFV1MKV.xml  README.md  dirfixer.py  mediaconch_35mm_filmPM.sh  mediaconch_8-16mm_filmPM.sh  mediaconch_audioAnalog.sh  mediaconch_audioAnalog_inHouse.sh  mediaconch_audioDigital.sh  mediaconch_filmPM.sh  mediaconch_videoAnalogSC.sh  mediaconch_videoFFv1.sh  mediaconch_video_inHouse.sh  mediaconch_video_inHouse_PM.sh  rawcooked_check.sh
qc_utilities/MediaconchPolicies/: MediaConch_NYPL-FLAC_Analog.xml  MediaConch_NYPL-FLAC_Digital.xml  MediaConch_NYPL_35mFilmPM.xml  MediaConch_NYPL_FFV1MKV.xml  MediaConch_NYPL_filmSC.xml  MediaConch_NYPL_video_SC.xml
(+101 files in other folders)
