[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nypl-ami-preservation"
version = "0.1.0"
authors = [
  { name="NYPL AMI Preservation", email="amipreservation@nypl.org" },
]
description = "NYPL AMI Preservation scripts and tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# ---------------------------------------------------------------
# PYTHON PACKAGES
# (This block MUST be part of the [project] section above)
# ---------------------------------------------------------------
dependencies = [
    "pandas",
    "openpyxl",
    "boto3",
    "requests",
    "py-trello",
    "bagit",
    "lxml",
    "jaydebeapi",
    "tqdm",
    "seaborn",
    "xlrd",
    "pymediainfo",
    "matplotlib",
    "python-fmrest",
    "PyPDF2",
    "colorama",
    "numpy",
    "chardet"
]

# ---------------------------------------------------------------
# COMMAND-LINE SCRIPTS
# (This is a SUB-TABLE of [project], so it comes after)
# ---------------------------------------------------------------
[project.scripts]
ami_collections_digitization_reporter = "ami_scripts.ami_collections_digitization_reporter:main"
ami_file_sync = "ami_scripts.ami_file_sync:main"
ami_record_exporter_and_analyzer = "ami_scripts.ami_record_exporter_and_analyzer:main"
ami_single_collection_processor = "ami_scripts.ami_single_collection_processor:main"
append_eoy_report_intro = "ami_scripts.append_eoy_report_intro:main"
audio_concat_and_bag = "ami_scripts.audio_concat_and_bag:main"
audio_duration_diff = "ami_scripts.audio_duration_diff:main"
audio_processing = "ami_scripts.audio_processing:main"
audio_to_mp4_converter = "ami_scripts.audio_to_mp4_converter:main"
cd_processing = "ami_scripts.cd_processing:main"
check_fm_media_records = "ami_scripts.check_fm_media_records:main"
clean_spec_csv_to_excel = "ami_scripts.clean_spec_csv_to_excel:main"
compare_aws_eavie = "ami_scripts.compare_aws_eavie:main"
copy_from_s3 = "ami_scripts.copy_from_s3:main"
copy_to_s3 = "ami_scripts.copy_to_s3:main"
cover_video_lines = "ami_scripts.cover_video_lines:main"
create_media_json = "ami_scripts.create_media_json:main"
create_object_bags = "ami_scripts.create_object_bags:main"
digitization_performance_tracker = "ami_scripts.digitization_performance_tracker:main"
duplicate_filemaker_records = "ami_scripts.duplicate_filemaker_records:main"
dvd_iso_rip = "ami_scripts.dvd_iso_rip:main"
export_s3_to_csv = "ami_scripts.export_s3_to_csv:main"
fetch_and_export_fm_data = "ami_scripts.fetch_and_export_fm_data:main"
fetch_spec_data = "ami_scripts.fetch_spec_data:main"
filemaker_to_json_validator = "ami_scripts.filemaker_to_json_validator:main"
film_processing = "ami_scripts.film_processing:main"
generate_test_media = "ami_scripts.generate_test_media:main"
hflip_film_packages = "ami_scripts.hflip_film_packages:main"
iso_checker = "ami_scripts.iso_checker:main"
iso_transcoder_cat_mkvmerge = "ami_scripts.iso_transcoder_cat_mkvmerge:main"
iso_transcoder_makemkv = "ami_scripts.iso_transcoder_makemkv:main"
json_to_csv = "ami_scripts.json_to_csv:main"
json_updater = "ami_scripts.json_updater:main"
json_validator = "ami_scripts.json_validator:main"
make_anamorphic_scs = "ami_scripts.make_anamorphic_scs:main"
markdown_linter = "ami_scripts.markdown_linter:main"
media_metrics_aggregator = "ami_scripts.media_metrics_aggregator:main"
mediaconch_checker = "ami_scripts.mediaconch_checker:main"
mediaconch_policy_comparison = "ami_scripts.mediaconch_policy_comparison:main"
mediaconch_policy_rule_updater = "ami_scripts.mediaconch_policy_rule_updater:main"
mediainfo_extractor = "ami_scripts.mediainfo_extractor:main"
migrated_media_file_checker = "ami_scripts.migrated_media_file_checker:main"
migration_status_reporter = "ami_scripts.migration_status_reporter:main"
mkv_concatenator = "ami_scripts.mkv_concatenator:main"
mkv_conformance_checker = "ami_scripts.mkv_conformance_checker:main"
prepend_title_cards = "ami_scripts.prepend_title_cards:main"
prsv_download = "ami_scripts.prsv_download:main"
prsv_list_ids = "ami_scripts.prsv_list_ids:main"
qc_scope_visualizer = "ami_scripts.qc_scope_visualizer:main"
rawcooked_check_mkv = "ami_scripts.rawcooked_check_mkv:main"
remake_servicecopy_bags = "ami_scripts.remake_servicecopy_bags:main"
rsync_and_organize_json = "ami_scripts.rsync_and_organize_json:main"
rsync_validator = "ami_scripts.rsync_validator:main"
scsb_batch_availability = "ami_scripts.scsb_batch_availability:main"
sox_trim_loudnorm = "ami_scripts.sox_trim_loudnorm:main"
spec_csv_summary_to_excel = "ami_scripts.spec_csv_summary_to_excel:main"
transcode_prores = "ami_scripts.transcode_prores:main"
trello_card_creator = "ami_scripts.trello_card_creator:main"
trello_engineer_notifier = "ami_scripts.trello_engineer_notifier:main"
trello_list_ids = "ami_scripts.trello_list_ids:main"
trello_qcqueue_mover = "ami_scripts.trello_qcqueue_mover:main"
trim_and_transcode = "ami_scripts.trim_and_transcode:main"
unbag_objects = "ami_scripts.unbag_objects:main"
update_vendor_collection_titles = "ami_scripts.update_vendor_collection_titles:main"
validate_ami_bags = "ami_scripts.validate_ami_bags:main"
video_processing = "ami_scripts.video_processing:main"
video_to_dvd_iso = "ami_scripts.video_to_dvd_iso:main"

# ---------------------------------------------------------------
# SETPTOOLS CONFIGURATION
# (This is a separate tool, so it's [tool.setuptools...])
# ---------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the root directory
include = ["ami_scripts*"]  # Include the ami_scripts package
exclude = ["ami_scripts.old_scripts*"]  # Exclude the old_scripts sub-directory